Change Surefire memory settings for low memory systems